--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@types/react-router-dom": "^5.3.3",
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
